syntax = "proto3";

package services;

option go_package = "oper/service";

service Accounter {
    rpc AccountAmount(AccountAmountReq) returns (AccountAmountRes) {}
}

message AccountAmountReq {
    int64 account_id = 1;
}

message AccountAmountRes {
    int64 amount = 2;
}